--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,15 @@
         <div style="flex:1"></div>
         <% if logged_in? %>
           <%= link_to current_user.name || current_user.email, profile_path, class: 'btn-retro btn-retro--outline' %>
-          <%= link_to 'Sign out', logout_path, method: :delete, class: 'btn-retro' %>
+
+          <!-- ensure Turbo/JS will send DELETE; also provide a <noscript> fallback -->
+          <%= link_to 'Sign out', logout_path, data: { turbo_method: :delete }, class: 'btn-retro' %>
+          <noscript>
+            <form action="<%= logout_path %>" method="post" style="display:inline">
+              <input type="hidden" name="_method" value="delete" />
+              <input type="submit" value="Sign out" class="btn-retro" />
+            </form>
+          </noscript>
         <% else %>
           <% if Rails.env.development? || Rails.env.test? %>
             <%= button_to 'Dev sign in', dev_login_path, method: :post, params: { email: 'user@example.com' }, class: 'btn-retro' %>
